--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,6 +1,6 @@
 .LoginPage {
   height: 100vh;
-  background-color: black;
+  background-color: #141414;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,25 +8,47 @@
   align-items: center;
 
   h1 {
-    font-size: 40px;
-    margin-bottom: 30px;
+    font-size: 50px;
+    margin-bottom: 5px;
   }
 
   .box-account {
-    margin-top: 30px;
-    height: 130px;
-    width: 130px;
+    margin: 30px 0px 15px 0px;
+    height: 160px;
+    width: 160px;
+    border: 4px solid #1f1f1f;
     background-color: rebeccapurple;
-    background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/disp/bb3a8833850498.56ba69ac33f26.png");
+    background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/disp/84c20033850498.56ba69ac290ea.png");
     background-size: cover;
-    border-radius: 20px;
-    cursor: pointer;
 
     &:hover {
-      height: 150px;
-      width: 150px;
-      transition: 0.5s;
-      border-radius: 30px;
+      height: 165px;
+      width: 165px;
+      transition: 0.1s;
     }
+  }
+
+  .profile-name {
+    font-size: 20px;
+    color: #808080;
+  }
+
+  button {
+    margin-top: 90px;
+    padding: 10px 25px;
+    background-color: transparent;
+    border: 1px solid #808080;
+    font-size: 18px;
+    color: #808080;
+
+    &:hover {
+      color: #de0813;
+      border-color: #de0813;
+    }
+  }
+
+  .box-account,
+  button {
+    cursor: pointer;
   }
 }
