--- a/src/style/subsection.scss
+++ b/src/style/subsection.scss
@@ -1,13 +1,13 @@
 .card-container {
   display: flex;
   flex-wrap: wrap;
-  padding: 20px;
+  padding: 10px 35px;
+  margin-bottom: 25px;
 }
 
 .filter {
-  margin-top: 30px;
-  margin-bottom: 10px;
-  text-align: center;
-  font-size: 30px;
+  margin-left: 40px;
+  font-size: 20px;
   font-weight: 600;
+  color: white;
 }
